--- a/asset/css/aboutus.css
+++ b/asset/css/aboutus.css
@@ -16,3 +16,47 @@
     height: 504px;
     object-fit: cover;
 }
+.template-about-us .section-contain{
+    padding: 64px 57px;
+}
+.template-about-us .section-contain .inner{
+	padding-top: 116px;
+	padding-bottom: 76px;
+}
+.template-about-us .section-contain-1 {
+	background: #F5F5F5;
+}
+.template-about-us .section-contain-1 .inner{
+	padding-right: 63px;
+}
+.template-about-us .section-contain-2 .inner{
+	padding-left: 62px;
+}
+.template-about-us .section-contain-3{
+	padding: 64px 127px 40px;
+	text-align: center;
+	background: #F5F5F5;
+}
+.template-about-us  .section-contain-3 .description{
+	max-width: 856px;
+    margin: 0 auto;
+}
+.template-about-us  .section-slide{
+	padding-bottom: 64px;
+	background: #F5F5F5;
+}
+.slide-image-contain .image-pagination{
+	text-align: center;
+	margin-top: 40px;
+}
+.slide-image-contain .image-pagination .swiper-pagination-bullet{
+	height: 10px;
+	width: 10px;
+	display: inline-block;
+    border-radius: 50%;
+	background: #DADADA;
+	margin: 0 5px;
+}
+.slide-image-contain .image-pagination .swiper-pagination-bullet-active{
+	background: #C19D68;
+}
