--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -1,6 +1,13 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Red+Rose:wght@300..700&display=swap');
+@font-face {
+  font-family: 'Great Vibes';
+  src: url('../css/font/GreatVibes-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
 body{
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
@@ -38,3 +45,37 @@ body{
     margin: 20px 0;
     display: inline-block;}
   .contant_box_404{ margin-top:-50px;}
+
+.inner .title{
+  font-family: "Great Vibes", cursive;
+  font-size: 40px;
+  font-weight: 400;
+  line-height: 40px;
+  color: #7E522B;
+  margin-bottom: 8px;
+}
+.inner .main-title{
+  font-family: "Red Rose", serif;
+  font-size: 40px;
+  font-weight: 500;
+  line-height: 48px;
+  color: #002D4A;
+  margin-bottom: 24px;
+}
+.inner .description{
+  font-family: "Open Sans", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+  color: #353535;
+  margin-bottom: 40px;
+}
+.inner .btn-contact{
+  font-family: "Open Sans", sans-serif;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 16px;
+  color: #FFFFFF;
+  background: #C19D68;
+  padding: 16px 24px;
+}
